// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextareaField - Snapshots > matches snapshot for TextareaField with custom rows and maxLength 1`] = `
<div>
  <div
    class="flex-1 cursor-pointer w-full items-center flex-row border gap-0 rounded-md font-medium"
    data-testid="container"
  >
    <textarea
      aria-invalid="false"
      class="px-5 py-4 h-25"
      data-testid="textarea"
      maxlength="100"
      rows="6"
      variant="inline"
    >
      Custom content
    </textarea>
  </div>
</div>
`;

exports[`TextareaField - Snapshots > matches snapshot for TextareaField with dashed variant 1`] = `
<div>
  <div
    class="flex-1 cursor-pointer w-full items-center flex-row border gap-0 rounded-md font-medium border-dashed !bg-alpha-90/10"
    data-testid="container"
  >
    <textarea
      aria-invalid="false"
      class="px-5 py-4 h-25"
      data-testid="textarea"
      rows="4"
      variant="inline"
    >
      Dashed content
    </textarea>
  </div>
</div>
`;

exports[`TextareaField - Snapshots > matches snapshot for TextareaField with error status 1`] = `
<div>
  <div
    class="flex-1 cursor-pointer w-full items-center flex-row border gap-0 rounded-md font-medium border-red-500 text-red-500"
    data-testid="container"
  >
    <textarea
      aria-invalid="true"
      class="px-5 py-4 h-25"
      data-testid="textarea"
      rows="4"
      variant="inline"
    >
      Error content
    </textarea>
  </div>
  <div
    class="ml-1 text-red-500"
    data-testid="typography"
  >
    Something went wrong
  </div>
</div>
`;

exports[`TextareaField - Snapshots > matches snapshot for TextareaField with placeholder 1`] = `
<div>
  <div
    class="flex-1 cursor-pointer w-full items-center flex-row border gap-0 rounded-md font-medium"
    data-testid="container"
  >
    <textarea
      aria-invalid="false"
      class="px-5 py-4 h-25"
      data-testid="textarea"
      placeholder="Enter your message here..."
      rows="4"
      variant="inline"
    />
  </div>
</div>
`;

exports[`TextareaField - Snapshots > matches snapshot for TextareaField with provided message 1`] = `
<div>
  <div
    class="flex-1 cursor-pointer w-full items-center flex-row border gap-0 rounded-md font-medium"
    data-testid="container"
  >
    <textarea
      aria-invalid="false"
      class="px-5 py-4 h-25"
      data-testid="textarea"
      rows="4"
      variant="inline"
    />
  </div>
  <div
    class="ml-1 text-muted-foreground"
    data-testid="typography"
  >
    Helper text
  </div>
</div>
`;

exports[`TextareaField - Snapshots > matches snapshot for TextareaField with success status 1`] = `
<div>
  <div
    class="flex-1 cursor-pointer w-full items-center flex-row border gap-0 rounded-md font-medium border-brand text-brand"
    data-testid="container"
  >
    <textarea
      aria-invalid="false"
      class="px-5 py-4 h-25"
      data-testid="textarea"
      rows="4"
      variant="inline"
    >
      Success content
    </textarea>
  </div>
  <div
    class="ml-1 text-brand"
    data-testid="typography"
  >
    All good!
  </div>
</div>
`;

exports[`TextareaField - Snapshots > matches snapshot for default TextareaField 1`] = `
<div>
  <div
    class="flex-1 cursor-pointer w-full items-center flex-row border gap-0 rounded-md font-medium"
    data-testid="container"
  >
    <textarea
      aria-invalid="false"
      class="px-5 py-4 h-25"
      data-testid="textarea"
      rows="4"
      variant="inline"
    >
      Default content
    </textarea>
  </div>
</div>
`;

exports[`TextareaField - Snapshots > matches snapshot for disabled TextareaField 1`] = `
<div>
  <div
    class="flex-1 cursor-pointer w-full items-center flex-row border gap-0 rounded-md font-medium"
    data-testid="container"
  >
    <textarea
      aria-invalid="false"
      class="px-5 py-4 h-25"
      data-testid="textarea"
      disabled=""
      rows="4"
      variant="inline"
    >
      Disabled content
    </textarea>
  </div>
</div>
`;

exports[`TextareaField - Snapshots > matches snapshot for readOnly TextareaField 1`] = `
<div>
  <div
    class="flex-1 cursor-pointer w-full items-center flex-row border gap-0 rounded-md font-medium"
    data-testid="container"
  >
    <textarea
      aria-invalid="false"
      class="px-5 py-4 h-25"
      data-testid="textarea"
      readonly=""
      rows="4"
      variant="inline"
    >
      ReadOnly content
    </textarea>
  </div>
</div>
`;
